# scrappertool

./: config.py  main.py  requirements.txt
AuctionToo/backend/: db.sqlite3
AuctionToo/backend/api/: data.csv  models.py  serializers.py  urls.py  views.py
AuctionToo/backend/api/management/commands/: import_csvs.py
AuctionToo/backend/api/migrations/: 0001_initial.py  0002_loopnetproperty_marketplaceproperty_and_more.py
AuctionToo/backend/backend/: settings.py  urls.py
AuctionToo/backend/csv_files/: crexi.csv
scrapers/: crexi.py  crexi_page.html  crexi_scraper.py  loopnet.py  loopnet_page.html  rmi.py  rmi_scraper.py
scrappers/Final 2/realestate_scrapers/: README.md  crexi_auctions_2025-09-30_14-18-53.csv  loopnet_auctions_2025-09-28_14-09-08.csv  pyproject.toml  requirements.txt  rmi_auctions_2025-09-28_14-20-32.csv
scrappers/Final 2/realestate_scrapers/scrapers/: __init__.py  crexi_scraper.py  loopnet_auctions_2025-09-30_16-55-28.csv  loopnet_auctions_2025-09-30_19-00-53.csv  loopnet_scraper.py  rmi_scraper.py
scrappers/Final 2/realestate_scrapers/utils/: __init__.py  csv_exporter.py  data_cleaner.py  property_data.py
utils/: cleaners.py  db.py
