[tool.poetry]
name = "crexi"
version = "0.1.0"
description = "Crexi Real Estate Scraper using undetected Chrome driver"
authors = ["zaidejaz <zaidejaz521@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
undetected-chromedriver = "^3.5.0"
selenium = "^4.15.0"
requests = "^2.31.0"
pandas = "^2.1.0"
beautifulsoup4 = "^4.12.0"
fake-useragent = "^1.4.0"
python-dotenv = "^1.0.0"
setuptools = "^75.0.0"
nodriver = "^0.47.0"
stealth-requests = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
